[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holo-contour"
version = "0.1.0"
description = "A minimalist toolkit for holographic plankton image segmentation"
authors = [
    { name = "Mojtaba Masoudi", email = "mojmas@noc.ac.uk" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "opencv-python",
    "matplotlib",
    "scikit-image",
    "pyyaml",
    "tqdm",
    "morphocut @ git+https://github.com/morphocut/morphocut.git"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["holo_contour"]


[tool.setuptools.package-data]
"holo_contour" = ["configs/*.yaml", "data/*"]

